@@ -199,6 +199,12 @@ namespace CBinding
 		public DisplayFlags DisplayFlags {
 			get { return DisplayFlags.None; }
 		}
+		
+		public CompletionCategory CompletionCategory  {
+			get {
+				return null;
+			}
+		}
 	}
 
 }
